# sqlite-diffable

./: .gitignore  README.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: deploy-demo.yml  test.yml
sqlite_diffable/: __init__.py  cli.py
tests/: conftest.py  test_black.py  test_dump.py  test_dump_module.py  test_objects.py
